# worder

./: .gitignore  README.md  pyproject.toml  worder.db  words.csv
worder/: db.py  handlers.py  main.py  menu.py  models.py  words_loader.py
worder/handlers/: callbacks.py  learn.py  menu.py  progress.py  review.py  start.py
